# GovDocsHelper

./: Makefile  main.py  pyproject.toml
gov_docs_helper/: __init__.py  fdlp_reference.py  readers.py  utils.py  weeding_set.py  writers.py
spreadsheets/: PreviousFDLPDisposalListOffers-2023-12-2.xlsx  SantaClara20240124.csv  SantaClara20240124.xlsx
